# spdb

./: .gitignore  .pylintrc  pyproject.toml
examples/: demo_plot_proflies.py
python/: pyproject.toml
python/spdm/: __version__.py  pyproject.toml
python/spdm/_obsolete/: old_entry.py  plugin.py  test_entry_map.py
python/spdm/core/: actor.py  actor2.py  aos.py  bundle.py  category.py  collection.py  component.py  context.py  directory.py  document.py  domain.py  edge.py  entity.py  entry.py  event.py  expression.py  field.py  file.py  function.py  functor.py  generic.py  generic_helper.py  geo_object.py  graph.py  history.py  htree.py  mapper.py  mesh.py  metadata.py  path.py  picewise.py  pluggable.py  policies.py  port.py  process.py  property_tree.py  query.py  service.py  signal.py  sp_object.py  (+7 more)
python/spdm/domain/: mesh_curvilinear.py  mesh_ppoly.py  mesh_rectangular.py  mesh_rectilinear.py  mesh_uniform.py
python/spdm/geometry/: bbox.py  box.py  circle.py  curve.py  geo_object.py  line.py  plane.py  point.py  point_set.py  polygon.py  polyhedron.py  polyline.py  solid.py  surface.py
python/spdm/mesh/: mesh.py  mesh_curvilinear.py  mesh_ppoly.py  (+5 more)
tests/core/: test_entry.py  test_file.py  test_file_hdf5.py  test_file_xml.py  test_generic.py  test_htree.py  test_path.py  test_pluggable.py  test_property.py  test_sptree.py
tests/expression/: test_delta.py  test_expression.py  test_function.py
tests/geometry/: test_geo_object.py  test_geometry.py  test_primary.py
tests/mesh/: test_mesh.py
tests/numlib/: test_calculus.py
tests/utils/: test_typing.py
(+58 files in other folders)
